
[tool.poetry]
name = "transaction-analysis"
version = "0.1.0"
description = "A Python project for analyzing financial transactions"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^3.9.2"
isort = "^5.9.3"
black = "^21.9b0"
mypy = "^0.910"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
  | \.venv
)/
'''

    